Added services section

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -108,6 +108,8 @@
             </div>
         </div>
     </section>
+
+    </div>
     <section id="services" style="color: #000; background-color: #f3f2f2;">
         <div class="pt-5">
             <div class="row d-flex justify-content-center">
@@ -170,6 +172,87 @@
                 <button id="load-more-button" class="btn btn-primary btn-lg me-3 mb-3 ">Load More</button>
             </div>
 
+        </div>
+    </section>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+    <section id="services2" class="current">
+        <div class="services-top">
+            <div class="container bootstrap snippets bootdey">
+                <div class="row text-center">
+                    <div class="col-sm-12 col-md-12 col-md-12">
+                        <h2 style="font-size: 60px;line-height: 60px;margin-bottom: 20px;font-weight: 900; font-family: Italiana">Services</h2>
+                        <p>Our <span class="highlight">experienced</span> and <span class="highlight">dedicated</span> staff provide these services with a smile.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-1 col-sm-12 col-md-12 col-md-10">
+                        <div class="services-list" >
+                            <div class="row">
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-magic highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Legal Guidance</div>
+                                            <div class="info">Blah blah</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-code highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Translation</div>
+                                            <div class="info">Quality code that lasts</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-pencil highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Document Authorization</div>
+                                            <div class="info">Words that tell your story</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-bullhorn highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Full-service</div>
+                                            <div class="info">Start to finish</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-eye highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Genealogical Research</div>
+                                            <div class="info">blaaaaah</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-4 col-md-4">
+                                    <div class="service-block" style="visibility: visible;">
+                                        <div class="ico fa fa-umbrella highlight"></div>
+                                        <div class="text-block">
+                                            <div class="name">Application Assistance</div>
+                                            <div class="info">Get your own work checked by the professionals</div>
+                                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
