got the service-provider.html page integrated to new theme

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block mt-lg-2 ml-3"><span
-                            class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger"></span></a>
+                            class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger" style="color: white"></span></a>
                 </div>
             </div>
         </div>
