--- a/src/main/resources/templates/directory-new.html
+++ b/src/main/resources/templates/directory-new.html
@@ -101,95 +101,20 @@
                     <div id="filter" class="p-2 m-2 bg-light ms-md-4 ms-sm-2 border">
                         <div class="border-bottom h5 text-uppercase">Filter By</div>
                         <div class="box border-bottom">
-                            <div class="box-label text-uppercase d-flex align-items-center">Price
+                            <div class="box-label text-uppercase d-flex align-items-center">Rating
                                 <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#inner-box" aria-expanded="false" aria-controls="inner-box"><span
                                         class="fas fa-plus"></span></button>
                             </div>
                             <div id="inner-box" class="collapse show">
-                                <div class="my-1"><label class="tick">Less than 2000 <input type="checkbox"
-                                                                                            checked="checked"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">2000 - 3000 <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">3000 - 4500 <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">4500 - 6000 <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">6000 - 8000 <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">8000 -10,000 <input type="checkbox" checked> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">10,000 and Above <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
+                                <div class="my-1"><a value="5" href="/" class="rating">5</a></div>
+                                <div class="my-1"><a value="4" href="/" class="rating">4</a></div>
+                                <div class="my-1"><a value="3" href="/" class="rating">3</a></div>
+                                <div class="my-1"><a value="2" href="/" class="rating">2</a></div>
+                                <div class="my-1"><a value="1" href="/" class="rating">1</a></div>
                             </div>
                         </div>
-                        <div class="box border-bottom">
-                            <div class="box-label text-uppercase d-flex align-items-center">Property Type
-                                <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#property" aria-expanded="false" aria-controls="property"><span
-                                        class="fas fa-plus"></span></button>
-                            </div>
-                            <div id="property" class="collapse">
-                                <div class="my-1"><label class="tick">Hotels <input type="checkbox" checked="checked"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Apartments <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Guest houses <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Resorts <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Villas <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Lodges <input type="checkbox" checked> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Holiday Homes <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                            </div>
-                        </div>
-                        <div class="box border-bottom">
-                            <div class="box-label text-uppercase d-flex align-items-center">Amenities
-                                <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#amenities" aria-expanded="false" aria-controls="amenities"><span
-                                        class="fas fa-plus"></span></button>
-                            </div>
-                            <div id="amenities" class="collapse show">
-                                <div class="my-1"><label class="tick">Parking <input type="checkbox" checked="checked">
-                                    <span class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Pets Allowed <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Room Service <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Family Rooms <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Free Wifi <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Non-smoking Rooms <input type="checkbox" checked>
-                                    <span class="check"></span> </label></div>
-                            </div>
-                        </div>
-                        <div class="box">
-                            <div class="box-label text-uppercase d-flex align-items-center">Room Facilities
-                                <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#room-facilities" aria-expanded="false"
-                                        aria-controls="room-facilities"><span class="fas fa-plus"></span></button>
-                            </div>
-                            <div id="room-facilities" class="collapse">
-                                <div class="my-1"><label class="tick">Air Condentioning <input type="checkbox"
-                                                                                               checked="checked"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Desk <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Balcony <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Flat Screen TV <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Coffe/Tea Maker <input type="checkbox"> <span
-                                        class="check"></span> </label></div>
-                                <div class="my-1"><label class="tick">Washing Machine <input type="checkbox" checked> <span
-                                        class="check"></span> </label></div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
