--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -101,95 +101,20 @@
         <div id="filter" class="p-2 m-2 bg-light ms-md-4 ms-sm-2 border">
           <div class="border-bottom h5 text-uppercase">Filter By</div>
           <div class="box border-bottom">
-            <div class="box-label text-uppercase d-flex align-items-center">Price
+            <div class="box-label text-uppercase d-flex align-items-center">Rating
               <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
                       data-bs-target="#inner-box" aria-expanded="false" aria-controls="inner-box"><span
                       class="fas fa-plus"></span></button>
             </div>
             <div id="inner-box" class="collapse show">
-              <div class="my-1"><label class="tick">Less than 2000 <input type="checkbox"
-                                                                          checked="checked"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">2000 - 3000 <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">3000 - 4500 <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">4500 - 6000 <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">6000 - 8000 <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">8000 -10,000 <input type="checkbox" checked> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">10,000 and Above <input type="checkbox"> <span
-                      class="check"></span> </label></div>
+              <div class="my-1"><a value="5" href="/" class="rating">5</a></div>
+              <div class="my-1"><a value="4" href="/" class="rating">4</a></div>
+              <div class="my-1"><a value="3" href="/" class="rating">3</a></div>
+              <div class="my-1"><a value="2" href="/" class="rating">2</a></div>
+              <div class="my-1"><a value="1" href="/" class="rating">1</a></div>
             </div>
           </div>
-          <div class="box border-bottom">
-            <div class="box-label text-uppercase d-flex align-items-center">Property Type
-              <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#property" aria-expanded="false" aria-controls="property"><span
-                      class="fas fa-plus"></span></button>
-            </div>
-            <div id="property" class="collapse">
-              <div class="my-1"><label class="tick">Hotels <input type="checkbox" checked="checked"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Apartments <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Guest houses <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Resorts <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Villas <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Lodges <input type="checkbox" checked> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Holiday Homes <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-            </div>
-          </div>
-          <div class="box border-bottom">
-            <div class="box-label text-uppercase d-flex align-items-center">Amenities
-              <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#amenities" aria-expanded="false" aria-controls="amenities"><span
-                      class="fas fa-plus"></span></button>
-            </div>
-            <div id="amenities" class="collapse show">
-              <div class="my-1"><label class="tick">Parking <input type="checkbox" checked="checked">
-                <span class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Pets Allowed <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Room Service <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Family Rooms <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Free Wifi <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Non-smoking Rooms <input type="checkbox" checked>
-                <span class="check"></span> </label></div>
-            </div>
-          </div>
-          <div class="box">
-            <div class="box-label text-uppercase d-flex align-items-center">Room Facilities
-              <button class="btn ms-auto" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#room-facilities" aria-expanded="false"
-                      aria-controls="room-facilities"><span class="fas fa-plus"></span></button>
-            </div>
-            <div id="room-facilities" class="collapse">
-              <div class="my-1"><label class="tick">Air Condentioning <input type="checkbox"
-                                                                             checked="checked"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Desk <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Balcony <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Flat Screen TV <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Coffe/Tea Maker <input type="checkbox"> <span
-                      class="check"></span> </label></div>
-              <div class="my-1"><label class="tick">Washing Machine <input type="checkbox" checked> <span
-                      class="check"></span> </label></div>
-            </div>
-          </div>
+
         </div>
       </div>
 
@@ -214,6 +139,28 @@
               </div>
               <div class="d-flex flex-column tags pt-1"></div>
               <div>
+                <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-light p-2 form-group">
+                  <form id="reviewForm" >
+                    <br>
+                    <input type="hidden" name="serviceProviderId" th:value="${serviceProvider.serviceProviderId}" />
+                    <label>Title:</label>
+                    <input class="form-control" type="text"  name="title" value="Give a brief title of your experience"><br>
+                    <label>Review:</label>
+                    <textarea class="form-control"  name="content"></textarea><br>
+                    <label>Rating:</label>
+                    <select class="form-control" name="rating">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select>
+                    <button  style="margin-top: 10px" onclick="submitForm(event)" class="btn btn-primary">Add Review</button>
+                  </form>
+
+                  <br>
+                </div>
+
                 <div class="service-provider-card">
                   <div class="card-header d-flex align-items-center">
                     <div class="align-content-end">
@@ -223,7 +170,7 @@
                       <i class="fa fa-caret-down"></i>
                     </button>
                   </div>
-                  <div th:id="'reviewsCollapse-' + ${serviceProvider.serviceProviderId}" class="collapse">
+                  <div th:id="'reviewsCollapse-' + ${serviceProvider.serviceProviderId}" class="collapse show">
                     <div class="p-4 service-provider-card">
                       <ul style="list-style: none" id="reviewList">
                         <li th:each="review : ${serviceProvider.reviews}">
@@ -244,26 +191,9 @@
                         <p><b><em>No reviews available.</em></b></p>
                       </div>
                     </div>
-                    <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-light p-2">
-                      <form id="reviewForm">
-                        <br>
-                        <label>Title:</label>
-                        <input type="text" th:id="'title-' + ${serviceProvider.serviceProviderId}" name="title" value="Give a brief title of your experience"><br>
-                        <label>Review:</label>
-                        <textarea th:id="'content-' + ${serviceProvider.serviceProviderId}" name="content"></textarea><br>
-                        <label>Rating:</label>
-                        <select th:id="'rating-' + ${serviceProvider.serviceProviderId}" name="rating">
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">5</option>
-                        </select>
-                        <button type="submit" onclick="createReview(event)" th:data-index="${serviceProvider.serviceProviderId}" style="margin-top: 10px" class="btn btn-primary">Add Review</button>
-                      </form>
-                      <br>
-                    </div>
                   </div>
+
+
                 </div>
                 <div class="pt-2">
                   <div th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">
