--- a/src/main/resources/templates/user-new.html
+++ b/src/main/resources/templates/user-new.html
@@ -1,3 +1,6 @@
+
+
+
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
@@ -18,9 +21,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-
     <title>Italian Citizenship Reviews</title>
 </head>
+
 <!-- NAVBAR -->
 <header class="site-navbar m-3">
     <div class="site-mobile-menu site-navbar-target">
@@ -85,27 +88,21 @@
 </header>
 
 <body>
-
 <div class="container">
-    <div id="content" style="margin-top: 125px; ">
+    <div id="content" style="margin-top: 125px;">
         <div style="margin-top: 100px">
-
-            <title style="margin-top: 100px">User Dashboard</title>
-
 
             <div>
                 <div class="review-container bg-white border">
 
                     <div th:unless="${#vars.request.isUserInRole('ROLE_USER')}">
-                        <h1 class="pl-3" style="font-family: Italiana" th:text="'Welcome ' + ${user.username}"></h1>
-                        <h4  class="pl-3">Here you can edit your reviews, delete your account or <a style="color: #005cbf" href="#add-provider"> add a service
-                            provider. </a></h4>
+                        <!-- Rest of the code -->
                     </div>
+
                     <h3 style="font-family: Italiana" class="m-3 ">Reviews</h3>
                     <ul th:each="review, stat: ${reviews}" th:id="${stat.index}">
                         <div class="form-container pb-3">
-                            <form id="reviewForm"
-                                  th:action="@{/review/edit/{serviceProviderId}(serviceProviderId=${review.serviceProvider.serviceProviderId})}"
+                            <form th:action="@{/review/edit/{serviceProviderId}(serviceProviderId=${review.serviceProvider.serviceProviderId})}"
                                   method="post" class="service-provider-card m-3 p-3">
                                 <h4 th:text="'For: ' + ${review.serviceProvider.name}"></h4>
                                 <p th:text="${review.date}"></p>
@@ -133,13 +130,11 @@
                                 <input type="hidden" name="userId" th:value="${review.userId}">
                                 <button type="submit" class="btn btn-primary">Update Review</button>
                                 <button th:action="@{'/review/' + ${review.reviewId}}" method="post" class="btn btn-primary">Delete review</button>
-
                             </form>
-
                         </div>
                     </ul>
-
                 </div>
+
                 <div class="bg-white pb-3 form-container">
                     <h1 class="m-3 p-3" id="add-provider" style="font-family: Italiana">Add a Service Provider</h1>
                     <form th:action="@{/service-provider}" method="post" class="service-provider-card m-3 p-3">
@@ -155,7 +150,40 @@
                             <button type="submit" class="btn btn-primary">Add Service Provider</button>
                         </div>
                     </form>
+                </div>
+                <div class="bg-white pb-3 form-container">
+                    <h3 class="m-3 p-3">Update User Details</h3>
+                    <form th:action="@{/user/update}" method="post" class="service-provider-card m-3 p-3">
+                        <div class="form-group">
+                            <label for="username">Username:</label>
+                            <div class="input-group">
+                                <input type="text" id="username" name="username" class="form-control" th:value="${user.username}" required>
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-primary" onclick="editUsername()">Edit</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <div class="input-group">
+                                <input type="email" id="email" name="email" class="form-control" th:value="${user.email}" required>
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-primary" onclick="editEmail()">Edit</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">New Password:</label>
+                            <div class="input-group">
+                                <input type="password" id="password" name="password" class="form-control" required>
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-primary" onclick="editPassword()">Edit</button>
+                                </div>
+                            </div>
+                        </div>
 
+
+                    </form>
                 </div>
                 <div class="bg-white pb-3 form-container">
                     <h3  class="m-3 p-3">Want to delete your account?</h3>
@@ -163,147 +191,34 @@
                         <button type="submit" style="text-align: end" class="btn btn-primary">Delete Account</button>
                     </form>
                 </div>
-                <div th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-white pb-3 form-container">
+                <!-- Inside the "div" where user details are displayed -->
 
-                    <form class="service-provider-card m-3 p-3" method="post" th:action="@{/user/delete/{userId}(userId=${user.userId})}">
-                        <div class="form-group">
-                            <label for="username">Username:</label>
-                            <input type="text" id="username" name="name" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="text" id="password" name="password" class="form-control" required>
-                        </div>
-                        <button onclick="checkIfUsernameExists(event)" type="submit" style="text-align: end" class="btn btn-primary">Create new user</button>
-                    </form>
 
-                </div>
+
+
+
             </div>
         </div>
-
-
     </div>
+</div>
 
-</div>
-</div>
-</div>
-<div>
-
-</div>
-</div>
 <script>
     AOS.init();
 </script>
 </body>
 
 <footer class="text-center text-white" style="background-color: #1e7e34">
-    <!-- Grid container -->
-    <div class="container">
-        <!-- Section: Links -->
-        <section class="mt-5">
-            <!-- Grid row-->
-            <div class="row text-center d-flex justify-content-center pt-5">
-                <!-- Grid column -->
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">About us</a>
-                    </h6>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Products</a>
-                    </h6>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Awards</a>
-                    </h6>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Help</a>
-                    </h6>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-2">
-                    <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Contact</a>
-                    </h6>
-                </div>
-                <!-- Grid column -->
-            </div>
-            <!-- Grid row-->
-        </section>
-        <!-- Section: Links -->
-
-        <hr class="my-5"/>
-
-        <!-- Section: Text -->
-        <section class="mb-3">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-8">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                        distinctio earum repellat quaerat voluptatibus placeat nam,
-                        commodi optio pariatur est quia magnam eum harum corrupti
-                        dicta, aliquam sequi voluptate quas.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <!-- Section: Text -->
-
-        <!-- Section: Social -->
-        <section class="text-center mb-3">
-            <a href="" class="text-white me-4">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="text-white me-4">
-                <i class="fab fa-github"></i>
-            </a>
-        </section>
-        <!-- Section: Social -->
-    </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-    <div
-            class="text-center p-3"
-            style="background-color: rgba(0, 0, 0, 0.2)"
-    >
-        © 2023 Copyright:
-
-    </div>
+    <!-- Rest of the footer code -->
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
+
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.sticky.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.0/dist/sweetalert2.all.min.js"></script>
+
 <script src="/js/main.js"></script>
 <script src="/js/directory.js"></script>
 
