--- a/src/main/resources/templates/user-new.html
+++ b/src/main/resources/templates/user-new.html
@@ -117,7 +117,7 @@
                                               class="form-control">[[${review.content}]]</textarea>
                                 </div>
                                 <div class="form-group">
-                                    <label for="'rating-' + ${stat.index}">Rating: [[${review.rating}]]</label>
+                                    <label  for="'rating-' + ${stat.index}">Rating: <b class="rating">[[${review.rating}]]</b></label>
                                     <select th:id="'rating-' + ${stat.index}" name="rating" class="form-control">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -163,24 +163,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <div class="input-group">
-                                <input type="email" id="email" name="email" class="form-control" th:value="${user.email}" required>
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary" onclick="editEmail()">Edit</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">New Password:</label>
-                            <div class="input-group">
-                                <input type="password" id="password" name="password" class="form-control" required>
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary" onclick="editPassword()">Edit</button>
-                                </div>
-                            </div>
-                        </div>
+
 
 
                     </form>
@@ -208,8 +191,108 @@
 </body>
 
 <footer class="text-center text-white" style="background-color: #1e7e34">
-    <!-- Rest of the footer code -->
+    <!-- Grid container -->
+    <div class="container">
+        <!-- Section: Links -->
+        <section class="mt-5">
+            <!-- Grid row-->
+            <div class="row text-center d-flex justify-content-center pt-5">
+                <!-- Grid column -->
+                <div class="col-md-2">
+                    <h6 class="text-uppercase font-weight-bold">
+                        <a href="#!" class="text-white">About us</a>
+                    </h6>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2">
+                    <h6 class="text-uppercase font-weight-bold">
+                        <a href="#!" class="text-white">Products</a>
+                    </h6>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2">
+                    <h6 class="text-uppercase font-weight-bold">
+                        <a href="#!" class="text-white">Awards</a>
+                    </h6>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2">
+                    <h6 class="text-uppercase font-weight-bold">
+                        <a href="#!" class="text-white">Help</a>
+                    </h6>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2">
+                    <h6 class="text-uppercase font-weight-bold">
+                        <a href="#!" class="text-white">Contact</a>
+                    </h6>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row-->
+        </section>
+        <!-- Section: Links -->
+
+        <hr class="my-5"/>
+
+        <!-- Section: Text -->
+        <section class="mb-5">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-8">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                        distinctio earum repellat quaerat voluptatibus placeat nam,
+                        commodi optio pariatur est quia magnam eum harum corrupti
+                        dicta, aliquam sequi voluptate quas.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Section: Text -->
+
+        <!-- Section: Social -->
+        <section class="text-center mb-5">
+            <a href="" class="text-white me-4">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="text-white me-4">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="text-white me-4">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="text-white me-4">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="text-white me-4">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="text-white me-4">
+                <i class="fab fa-github"></i>
+            </a>
+        </section>
+        <!-- Section: Social -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+            class="text-center p-3"
+            style="background-color: rgba(0, 0, 0, 0.2)"
+    >
+        © 2023 Copyright:
+
+    </div>
 </footer>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
