--- a/src/main/resources/templates/directory-new.html
+++ b/src/main/resources/templates/directory-new.html
@@ -38,12 +38,20 @@
             <div class="site-logo col-3 pt-3 "><a id="title-anchor" href="/" style="color: #1e7e34">Italian Citizenship Reviews</a>
 
             </div>
-            <nav class="site-navigation flex-md-row" >
-                <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0" >
-                    <li ><a class="" href="about.html"><b>About</b></a></li>
+            <nav class="site-navigation flex-md-row">
+                <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
+                    <li id="dashboard-button" class="d-md-none">
+                        <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" href="/user/dashboard/admin/" class="btn btn-primary border-width-2 ">Admin Dashboard
+
+                        </a>
+                        <a th:if="${#vars.request.isUserInRole('ROLE_USER')}" href="/user/dashboard/" class="btn btn-primary border-width-2 ">Dashboard
+                            <i class="fas fa-user-circle"></i>
+                        </a>
+                    </li>
+                    <li><a class="" href="about.html"><b>About</b></a></li>
                     <li class="has-children">
-                        <a href="/service-provider/all"><b > Services </b> </a>
-                        <ul class="dropdown" >
+                        <a href="/service-provider/all" ><b> Services </b> </a>
+                        <ul class="dropdown">
                             <li><a href="">Translation Service</a></li>
                             <li><a href="">Application Assistance</a></li>
                             <li><a href="">Genealogical Research</a></li>
@@ -51,11 +59,9 @@
                             <li><a href="">Full Service</a></li>
                         </ul>
                     </li>
-                    <li><a th href="/user/dashboard/"><b>Blog</b></a></li>
-                    <li class="d-md-none"><a href="/logout"
-                                             th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">Logout</a>
-                        <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}"
-                           href="/login"> Login</a></li>
+                    <li class="d-md-none"><a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">Logout</a>
+                        <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" href="/login"> Login</a></li>
+
                 </ul>
             </nav>
             <div class="right-cta-menu text-right d-flex align-items-right col-3">
@@ -183,22 +189,23 @@
                                                             <p><b><em>No reviews available.</em></b></p>
                                                         </div>
                                                     </div>
-                                                    <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-light p-2">
-                                                        <form id="reviewForm">
+                                                    <div th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="bg-light p-2 form-group">
+                                                        <form id="reviewForm" >
                                                             <br>
+                                                            <input type="hidden" name="serviceProviderId" th:value="${serviceProvider.serviceProviderId}" />
                                                             <label>Title:</label>
-                                                            <input type="text" th:id="'title-' + ${serviceProvider.serviceProviderId}" name="title" value="Give a brief title of your experience"><br>
+                                                            <input class="form-control" type="text" th:id="'title-' + ${serviceProvider.serviceProviderId}" name="title" value="Give a brief title of your experience"><br>
                                                             <label>Review</label>
-                                                            <textarea th:id="'content-' + ${serviceProvider.serviceProviderId}" name="content"></textarea><br>
+                                                            <textarea class="form-control" th:id="'content-' + ${serviceProvider.serviceProviderId}" name="content"></textarea><br>
                                                             <label>Rating:</label>
-                                                            <select th:id="'rating-' + ${serviceProvider.serviceProviderId}" name="rating">
+                                                            <select class="form-control" th:id="'rating-' + ${serviceProvider.serviceProviderId}" name="rating">
                                                                 <option value="1">1</option>
                                                                 <option value="2">2</option>
                                                                 <option value="3">3</option>
                                                                 <option value="4">4</option>
                                                                 <option value="5">5</option>
                                                             </select>
-                                                            <button type="submit" onclick="createReview(event)" th:data-index="${serviceProvider.serviceProviderId}" style="margin-top: 10px" class="btn btn-primary">Add Review</button>
+                                                            <button type="submit" onclick="submitForm(event)" th:data-index="${serviceProvider.serviceProviderId}" style="margin-top: 10px" class="btn btn-primary">Add Review</button>
                                                         </form>
                                                         <br>
                                                     </div>
